@@ -12,11 +12,17 @@ sub new
 
 	$self->{actions} = [qw/ stop save next prev /];
 
+	$self->{icon} = "/style/images/action_edit.png";
+
 	$self->{appears} = [
 		{
 			place => "eprint_actions",
 			position => 1500,
-		}
+		},
+		{
+			place => "eprint_item_actions",
+			position => 200,
+		},
 	];
 
 	$self->{staff} = 0;
