@@ -24,7 +24,9 @@ sub new
 { place => "eprint_actions_editor_archive", action => "move_buffer", position => 100, },
 { place => "eprint_actions_editor_archive", action => "move_deletion", position => 100, },
 { place => "eprint_actions_editor_deletion", action => "move_archive", position => 100, },
+{ place => "eprint_review_actions", action => "move_archive", postino => 200, },
 	];
+	$self->{action_icon} = { move_archive => "/style/images/action_approve.png" };
 
 	return $self;
 }
